<?xml version="1.0"?>
<package format="2">
  <name>au_422_navigation</name>
  <version>1.0.0</version>
  <description>This package allows the user to implement its navigation strategy : path planning and path following</description>
  <maintainer email="johvany.gustave@ipsa.fr">Johvany Gustave</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
